<resources>
    <string name="app_name">COVID19</string>
    <string name="login"> Se connecter</string>
    <string name="nav_c">Connexion</string>
    <string name="nav_f">Favoris</string>
    <string name="nav_deconect">Déconnexion</string>
    <string name="nav_share">Partager</string>
    <string name="notife">Notifications</string>
    <string name="communicate">Communication</string>
    <string name="logout">Déconnexion</string>
    <string name="register">Sinscrire</string>
    <string name="connect"> Veuillez se connecter</string>
    <string name="mail">E-mail</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="pass">Mot de passe</string>
    <string name="util">Nom Utilisateur</string>
    <string name="quest">Vous navez pas de compte?</string>
    <string name="Accueil">ACCUEIL</string>
    <string name="Contact">CONTACT</string>
    <string name="bien">Bienvennue dans note App</string>
    <string name="symptomes">SYMPTOMES</string>
    <string name="prevention">PREVENTION</string>
    <string name="traitement">TRAITEMENT</string>
    <string name="infos">INFOS SANITAIRES</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="adress">Adresse mail</string>
    <string name="adres">Adresse</string>
    <string name="nbr">Nombre de fois</string>
    <string name="date">DATE</string>
    <string name="date1">Date</string>
    <string name="taper_nom">Taper votre nom</string>
    <string name="taper_prenom">Taper votre prenom</string>
    <string name="taper_adress">Taper votre adresse mail</string>
    <string name="taper_adres">Taper votre adresse</string>
    <string name="taper_nbr">Taper le nombre de fois</string>
    <string name="text1">La COVID-19 affecte les individus de différentes manières. La plupart des personnes infectées développent une forme légère à modérée de la maladie et guérissent sans hospitalisation.
</string>
    <string name="symp">Symptômes les plus fréquents:</string>
    <string name="symp1"> *fièvre</string>
    <string name="symp2">*toux sèche</string>
    <string name="symp3">*fatigue</string>
    <string name="symp4"> Symptômes graves:</string>
    <string name="symp5">*difficultés à respirer ou essoufflement</string>
    <string name="symp6">*sensation d’oppression ou douleur au niveau de la poitrine</string>
    <string name="symp7">*perte d’élocution ou de motricité</string>
    <string name="descrp">Voici quelques symptomes</string>
    <string name="title">Portez un masque.Sauvez des vies.</string>
    <string name="title1">Portez un masque.</string>
    <string name="title2">Lavez-vous les mains</string>
    <string name="title3">Respectez la distanciation physique</string>
    <string name="txt">Protégez-vous et protégez les autres en vous tenant informé et en prenant les précautions appropriées. Suivez les conseils des autorités sanitaires locales.</string>
    <string name="apres">Pour empêcher la propagation de la COVID-19, suivez ces recommandations :</string>
    <string name="apres1">*Lavez-vous fréquemment les mains. Utilisez du savon et de leau, ou une solution hydroalcoolique.</string>
    <string name="apres2">*Tenez-vous à distance de toute personne qui tousse ou éternue.</string>
    <string name="apres3">*Évitez de vous toucher les yeux, le nez ou la bouche.</string>
    <string name="trait">À ce jour, il n’existe pas de vaccins ou de ‎médicaments spécifiques à la COVID-19.‎ Des traitements font l’objet d’études et seront ‎testés dans le cadre d’essais cliniques</string>
    <string name="profile">Profil Utilisateur</string>
    <string name="notf">Notification</string>
    <string name="notf1">Envoyez message</string>
    <string name="list">Liste des contacts</string>
    <string name="att">Attention !</string>
    <string name="trait1">Soins auto-administrés</string>
    <string name="trait2">Si vous pensez être malade, reposez-vous, buvez ‎abondamment et consommez des aliments nutritifs. ‎Restez dans une chambre séparée des autres ‎membres de la famille et utilisez une salle de bains ‎différente, si possible. Nettoyer et désinfecter ‎régulièrement les surfaces que vous touchez.</string>
    <string name="trait3">Tous les membres du ménage doivent conserver un ‎mode de vie sain. Maintenez un régime alimentaire ‎adapté, pratiquez des activités physiques et gardez ‎le contact avec vos proches par téléphone ou sur les ‎réseaux sociaux. Dans les périodes difficiles, les ‎enfants ont particulièrement besoin d’amour et ‎d’attention de la part des adultes. Conservez autant ‎que possible vos habitudes et vos horaires.‎</string>
    <string name="trait4">Il est normal d’être triste, stressé ou troublé durant ‎une période de crise. Cela peut vous aider de parler ‎à des gens en qui vous avez confiance, comme vos ‎amis et les membres de votre famille. Si vous ‎sentez dépassé par les événements, parlez-en à des ‎professionnels de la santé ou à un conseiller.</string>
    <string name="desc_fleche">Mon flèche</string>
    <string name="desc_corona">Corona</string>
    <string name="desc_flechecontact">Retour contact</string>
    <string name="desc_flecheinfo">Retour informations</string>
    <string name="desc_monimage">image test</string>
    <string name="desc_flechelisteinfo">Retour liste contact</string>
    <string name="desc_notif">Les notifications</string>
    <string name="desc_flechenotif">Retour notification</string>
    <string name="desc_prevention">prevention contre le covid</string>
    <string name="desc_flecheprevention">Retour prevention</string>
    <string name="desc_utilisateur">image utilisateur</string>
    <string name="desc_déconnexion">déconnexion de la session</string>
    <string name="desc_flechesymptomes">Symptomes du covid</string>
    <string name="descflechetraitement">Retour traitement</string>
    <string name="desc_medica">Médicament</string>
    <string name="check">Mémoriser mes informations de connexion</string>
    <string name="mail_conn">com.dsi32.COVID19.nom</string>
    <string name="passwrd">com.dsi32.COVID19.pass</string>
    <string name="checkbox">com.dsi32.COVID19.checkbox</string>
    <string name="send">Envoyez mail</string>

</resources>
