<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/FireBrick">

        <ImageView
            android:id="@+id/back1"
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/desc_flecheprevention" />
        <TextView
            android:id="@+id/grd4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prevention"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/White"
            android:textSize="30sp" />
    </FrameLayout>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:src="@drawable/masque"
        android:layout_gravity="center"
        android:contentDescription="@string/desc_prevention" />
    <TextView
        android:id="@+id/tit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
    </TextView>
    <TextView
        android:id="@+id/tit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
    </TextView>
    <TextView
        android:id="@+id/tit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
    </TextView>
    <TextView
        android:id="@+id/tit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
    </TextView>
    <TextView
        android:id="@+id/par1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/par2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apres"
            android:textStyle="italic"
            android:textSize="17sp"
            android:textColor="@color/colorAccent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">
        </TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/par3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apres2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/par4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apres1"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/par5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apres3"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textSize="20sp" />
</LinearLayout>