<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:anddroid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/corona"
            android:contentDescription="@string/desc_corona" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"
            android:background="#80000000"
            >
            <TextView
                android:id="@+id/sin1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="italic"
                android:padding="16dp"/>
        </LinearLayout>
    </FrameLayout>
    <EditText
        android:id="@+id/mal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="#000"
        android:background="#f0f0f4"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/pswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:background="#f0f0f4"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/lockers"
        android:autofillHints="pass"
        anddroid:passwordToggleEnabled="true"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/check"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        >

    </CheckBox>
    <TextView
        android:id="@+id/id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/format_bouton"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textAlignment="center"
        android:padding="14dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="#fff"
        />

    <TextView
        android:id="@+id/id3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/format_boton"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest"
        android:textColor="#8B0000"
        android:textSize="16sp"
        android:layout_gravity="center" />
</LinearLayout>